--- a/styles/global.css
+++ b/styles/global.css
@@ -49,4 +49,8 @@ input[type="search"]::-webkit-search-results-decoration {
   .p-small-dark {
     @apply font-onest font-normal text-[14px] leading-[20px] text-[#F6F6F6];
   }
+
+  .card-nft {
+    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-none flex flex-col;
+  }
 }
