feat: add create-swap-n-n
- refactor frontend v1
- remove chains ids
- adjust the select time
- add create swap  n-n
- adjust design

--- a/styles/global.css
+++ b/styles/global.css
@@ -62,6 +62,6 @@ input[type="search"]::-webkit-search-results-decoration {
   }
 
   .card-nft {
-    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-none flex flex-col;
+    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col;
   }
 }
