--- a/styles/global.css
+++ b/styles/global.css
@@ -44,6 +44,13 @@ input[type="search"]::-webkit-search-results-decoration {
     @apply font-onest font-medium text-[16px] leading-[20px] text-[#F6F6F6];
   }
 
+  .p-medium-2-small {
+    @apply font-onest font-medium text-[14px] leading-[16px] text-[#212322];
+  }
+  .p-medium-2-small-dark {
+    @apply font-onest font-medium text-[14px] leading-[16px] text-[#F6F6F6];
+  }
+
   .p-normal-2 {
     @apply font-onest font-normal text-[16px] leading-[20px] text-[#707572];
   }
