--- a/styles/global.css
+++ b/styles/global.css
@@ -89,6 +89,9 @@ input[type="search"]::-webkit-search-results-decoration {
     @apply font-onest font-medium text-[14px] leading-[20px] text-[#F6F6F6];
   }
 
+  .p-small-variant-black {
+    @apply font-onest font-normal text-[14px] leading-[20px] text-[#181A19];
+  }
   .p-small {
     @apply font-onest font-normal text-[14px] leading-[20px] text-[#707572];
   }
