--- a/styles/global.css
+++ b/styles/global.css
@@ -22,6 +22,18 @@ input[type="search"]::-webkit-search-results-decoration {
     box-shadow: 0px 0px 6px 1px rgba(0, 0, 0, 0.3);
   }
 
+  .shadow-token {
+    box-shadow: 0px 1px 4px 1px #00000026 inset;
+  }
+
+  .shadow-tag {
+    box-shadow: 0px 0px 6px 1px #0000004d;
+  }
+
+  .shadow-three-dots {
+    box-shadow: 0px 0px 12px 1px #00000066;
+  }
+
   .title-h1 {
   }
 
@@ -101,19 +113,21 @@ input[type="search"]::-webkit-search-results-decoration {
   .p-small-dark {
     @apply font-onest font-normal text-[14px] leading-[20px] text-[#F6F6F6];
   }
-
-  .p-xsmall {
-    @apply font-onest font-normal text-[12px] leading-[20px];
+  .p-small-dark-variant-grey {
+    @apply font-onest font-normal text-[14px] leading-[20px] text-[#A3A9A5];
   }
 
   .card-nft-normal {
-    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col;
+    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col shadow-token;
   }
   .card-nft-small {
-    @apply shadow-inner mx-auto w-[44px] h-[44px] lg:w-[44px] lg:h-[44px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col;
+    @apply shadow-inner mx-auto w-[44px] h-[44px] lg:w-[44px] lg:h-[44px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col shadow-token;
+  }
+  .card-nft-medium {
+    @apply shadow-inner mx-auto w-[72px] h-[72px] lg:w-[72px] lg:h-[72px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col shadow-token;
   }
   .card-nft-large {
-    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col;
+    @apply shadow-inner mx-auto w-[90px] h-[90px] lg:w-[80px] lg:h-[80px] relative rounded-xl border-2 border-[#E0E0E0] bg-[#E0E0E0] dark:bg-[#353836] dark:border-[#212322] flex flex-col shadow-token;
   }
 
   .ens-avatar-small {
