--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,17 @@ input[type="search"]::-webkit-search-results-decoration {
 @tailwind utilities;
 
 @layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+
   .shadow-add-manually-card {
     box-shadow: 0px 0px 12px 1px #00000066;
   }
